Task 6 /how-government-works/ Fix alignment of 21 Cabinet ministers in the circles under Ministers heading on tablet

--- a/app/assets/stylesheets/frontend/views/_how-gov-works.scss
+++ b/app/assets/stylesheets/frontend/views/_how-gov-works.scss
@@ -470,8 +470,9 @@
       }
       span.circle .caption {
         position: relative;
-        top: -5px;
+        top: -10px;
         @include ig-core-14;
+        line-height: 1;
       }
     }
   }
